--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       crossorigin=""
     />
     <link rel="stylesheet" href="./build/style.css" />
-    <link rel="stylesheet" href="../src/style.css" />
+    <link rel="stylesheet" href="./main.css" />
     <title>DigitalizMK - Make your business grow</title>
   </head>
   <body class="bg-primary">
@@ -90,7 +90,8 @@
         class="w-full h-96 p-5 mb-5 md:mt-32 md:mb-32 flex justify-end md:justify-start items-center flex-col md:flex-row gap-4 md:gap-16 bg-mobile"
       >
         <img
-          src="https://c1prowbmhyo8n8ks.public.blob.vercel-storage.com/landing/officewhite-aOmwOMZWaMsgwWtTnRTZS5cZTmg0wI.webp"
+          loading="lazy"
+          src="img/office15189548.webp"
           alt="imagen de gente en una reunión"
           class="hidden md:block w-2/4 h-auto rounded-md"
         />
@@ -134,8 +135,9 @@
               fast-paced digital landscape.
             </p>
             <img
+              loading="lazy"
               class="w-1/2 h-auto rounded-md shadow-md hidden lg:block"
-              src="https://c1prowbmhyo8n8ks.public.blob.vercel-storage.com/landing/pexels-building-QhABNvPi7gaYREbYABlFmb072Q62bO.webp"
+              src="img/pexels-building.webp"
               alt=""
             />
           </div>
@@ -155,7 +157,8 @@
                 class="rounded-full mb-2 overflow-hidden w-16 h-16 flex items-center justify-center bg-white"
               >
                 <img
-                  src="https://c1prowbmhyo8n8ks.public.blob.vercel-storage.com/landing/pexels-linkedin-sales-navigator-2182970-e79q4jBIWPkXMaDB5TXkzB3kzyS5UM.webp"
+                  loading="lazy"
+                  src="img/pexels-linkedin-sales-navigator-2182970.webp"
                   alt="Foto 1"
                   class="w-16 h-auto rounded-md mb-2"
                 />
@@ -176,7 +179,8 @@
                 class="rounded-full mb-2 overflow-hidden w-16 h-16 flex items-center justify-center bg-white"
               >
                 <img
-                  src="https://c1prowbmhyo8n8ks.public.blob.vercel-storage.com/landing/pexels-christina-morillo-1181686-yRYUlS6idHSjUtbMCSIwxuhX0HTCoQ.webp"
+                  loading="lazy"
+                  src="img/pexels-christina-morillo-1181686.webp"
                   alt="Foto 1"
                   class="w-16 h-auto rounded-md mb-2"
                 />
@@ -197,7 +201,8 @@
                 class="rounded-full mb-2 overflow-hidden w-16 h-16 flex items-center justify-center bg-white"
               >
                 <img
-                  src="https://c1prowbmhyo8n8ks.public.blob.vercel-storage.com/landing/pexels-andrea-piacquadio-733872-iPlbcnXTumeOa8CyyQQC7GgBPSpFpm.webp"
+                  loading="lazy"
+                  src="img/pexels-andrea-piacquadio-733872.webp"
                   alt="Foto 1"
                   class="w-16 h-auto rounded-md mb-2"
                 />
@@ -218,7 +223,8 @@
                 class="rounded-full mb-2 overflow-hidden w-16 h-16 flex items-center justify-center bg-white"
               >
                 <img
-                  src="https://c1prowbmhyo8n8ks.public.blob.vercel-storage.com/landing/pexels-polina-tankilevitch-5473391-EItL25SHAmmw2eFg6tUB2lAJICB7Du.webp"
+                  loading="lazy"
+                  src="img/pexels-polina-tankilevitch-5473391.webp"
                   alt="Foto 1"
                   class="w-16 h-auto rounded-md mb-2"
                 />
@@ -247,7 +253,7 @@
         </div>
         <div class="grid gap-4 grid-cols-2 lg:grid-cols-4">
           <div
-            class="h-40 p-2 bg-slate-700 border-solid border-2 border-slate-500 rounded-md bg-[url('https://c1prowbmhyo8n8ks.public.blob.vercel-storage.com/landing/seo-bN8j13WL48iSQzc0vMAN3J6lPXIBxH.webp')] bg-cover bg-center"
+            class="h-40 p-2 bg-slate-700 border-solid border-2 border-slate-500 rounded-md bg-rrss"
           >
             <p class="text-white font-semibold mb-1 md:text-2xl md:font-bold">SEO</p>
             <p class="text-white text-sm md:text-lg font-thin md:font-medium">
@@ -255,7 +261,7 @@
             </p>
           </div>
           <div
-            class="h-40 p-2 bg-slate-700 border-solid border-2 border-slate-500 rounded-md bg-[url('https://c1prowbmhyo8n8ks.public.blob.vercel-storage.com/landing/pcc-UkfEeYXNvCgkeg05eVRsUYV7yuNKCN.webp')] bg-cover bg-center"
+            class="h-40 p-2 bg-slate-700 border-solid border-2 border-slate-500 rounded-md bg-mrk"
           >
             <p class="text-white font-semibold mb-1 md:text-2xl md:font-bold">PCC</p>
             <p class="text-white text-sm md:text-lg font-thin md:font-medium">
@@ -264,7 +270,7 @@
           </div>
 
           <div
-            class="h-40 p-2 bg-slate-700 border-solid border-2 border-slate-500 rounded-md bg-[url('https://c1prowbmhyo8n8ks.public.blob.vercel-storage.com/landing/social_media-CerVdnqpRTpgvQdbQkmMxpQ5V34qPo.webp')] bg-cover bg-center"
+            class="h-40 p-2 bg-slate-700 border-solid border-2 border-slate-500 rounded-md bg-rrss"
           >
             <p class="text-white font-semibold mb-1 md:text-2xl md:font-bold">Social Media</p>
             <p class="text-white text-sm md:text-lg font-thin md:font-medium">
@@ -272,7 +278,7 @@
             </p>
           </div>
           <div
-            class="h-40 p-2 bg-slate-700 border-solid border-2 border-slate-500 rounded-md bg-[url('https://c1prowbmhyo8n8ks.public.blob.vercel-storage.com/landing/dev-V7WPoUoxpfv2DB520O6YaA3rkphhPb.webp')] bg-cover bg-center"
+            class="h-40 p-2 bg-slate-700 border-solid border-2 border-slate-500 rounded-md bg-dev"
           >
             <p class="text-white font-semibold mb-1 md:text-2xl md:font-bold">Web Development</p>
             <p class="text-white text-sm md:text-lg font-thin md:font-medium">
